fixed overlapping button

--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,8 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 400px;
-  height: 100vh;
+  bottom: 0;
+  width: min(560px, 100vw);
   background-color: rgb(31, 41, 55);
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
